--- a/sass/_media.sass
+++ b/sass/_media.sass
@@ -12,7 +12,6 @@
       padding-bottom: 30px
     &__search
       margin-left: auto
-      max-width: 340px
     &-menu
       &__list
         padding-top: 22px
@@ -23,6 +22,9 @@
         font-weight: 700
         font-size: 12px
         line-height: 15px
+  .search
+    &__input
+      width: 340px
 @media ( max-width: 768px )
   .container
     max-width: 576px
@@ -33,6 +35,7 @@
     &-button
       width: 16px
       height: 11px
+      padding: 0
       display: flex
       align-items: center
       justify-content: space-between
